<resources>
    <string name="app_name">SmartCitizen</string>
    <string name="app_name_alt">Smart Citizen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user">User</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>

    <!-- Activies -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="other">Other</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Log in</string>

    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Exception messages -->
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">User not found</string>
    <string name="exception_message_user_already_taken">User already taken</string>
    <string name="exception_message_google_fit_query">Error getting Google Fit data</string>
    <string name="exception_message_permissions_denied">SmartCitizen needs requested permissions to run properly</string>
    <string name="exception_message_google_sign_in_failed">Error signing in the specified account. Please choose a different account.</string>

    <string name="location">Location</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="version">Version</string>
    <string name="prompt_email">Email</string>
    <string name="action_login">Log in</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_user">Invalid user</string>
    <string name="error_user_not_found">User not found</string>
    <string name="uploading_data_hermes">Sending data to SmartCitizen server</string>
    <string name="uploading_locations_hermes">Sending locations to SmartCitizen server</string>
    <string name="uploading_activities_hermes">Sending activities to SmartCitizen server</string>
    <string name="fitness">Fitness</string>
    <string name="action_unregister_listener">Unregister listener</string>
    <string name="intro_text">Hi! Let\\\'s listen to some available data sources! Check the menu for more actions!</string>
    <string name="title_activity_fitness">Fitness</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="calories">calories</string>
    <string name="never">Never</string>
    <string name="details">Details</string>
    <string name="bpm">bpm</string>
    <string name="km">km</string>
    <string name="kcal">kcal</string>
    <string name="duration_min">%1$d <small>minutes</small></string>
    <string name="duration_min_abbrev">%1$d <small>m</small></string>
    <string name="duration_hour_min">%1$s <small>hours</small> %2$s <small>minutes</small></string>
    <string name="duration_hour_min_abbrev">%1$s <small>h</small> %2$s <small>m</small></string>
    <string name="activity">Activity</string>
    <string name="title_activity_location_details">Location details</string>
    <string name="title_activity_activity_timeline">Activity timeline</string>

    <string name="pref_title_activity_recognition">Enable activity recognition</string>
    <string name="pref_title_record_data">Record sensor data</string>
    <string name="pref_title_upload_locations_hermes">Send locations to Hermes Citizen server</string>
    <string name="pref_title_upload_activities_hermes">Send activities to Hermes Citizen server</string>
    <string name="pref_title_version">Version</string>
    <string name="default_steps_goal">8000</string>
    <string name="default_distance_goal">8</string>
    <string name="default_calories_goal">3000</string>
    <string name="pref_title_sync_data_hermes">Sync data with Hermes Citizen server</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_pattern">This password has forbidden chars</string>
    <string name="error_email_pattern">This email has forbidden chars</string>
    <string name="signup">Sign up</string>
    <string name="not_registered_signup_hint">Not registered? Sign up now</string>
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="user_signed_up">User signed up</string>
    <string name="app_permissions_required">Permissions required</string>
    <string name="app_permissions_rationale">SmartCitizen needs Access Fine Location and Body Sensors permissions in order to run properly</string>
    <string name="search">Search</string>
    <string name="month">Month</string>
    <string name="from_date">From date:</string>
    <string name="to_date">To date:</string>
    <string name="backup_data">Backup data</string>
    <string name="select_date">Select date</string>
    <string name="backup">Backup</string>
    <string name="locations_sent">Locations sent</string>
    <string name="activities_sent">Activities sent</string>
    <string name="steps_sent">Steps sent</string>
    <string name="distances_sent">Distances sent</string>
    <string name="calories_sent">Calories sent</string>
    <string name="heart_rates_sent">Heart rates sent</string>
    <string name="sending_data">Sending data…</string>

</resources>
