<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context=".ui.fragment.BackupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_date"/>
        <TextView
            android:id="@+id/fromDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginStart="@dimen/item_margin"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/select_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_date"/>
        <TextView
            android:id="@+id/toDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginStart="@dimen/item_margin"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/select_date"/>

    </LinearLayout>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/backup_data" />

    <TextView
        android:id="@+id/logTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>